# arm-sim

./: .gitignore  .gitmodules  README.md  rebuild.sh  run.sh
docker/: Dockerfile  entrypoint.sh
workspace/: frames_2025-05-14_05.40.58.gv
workspace/src/six_dof_arm/: CMakeLists.txt  package.xml
workspace/src/six_dof_arm/config/: six_dof_arm_controllers.yaml
workspace/src/six_dof_arm/launch/: launch_gazebo.py  launch_moveit.py  launch_trajectory.py  launch_viz.py
workspace/src/six_dof_arm/rviz/: six_dof_arm.rviz
workspace/src/six_dof_arm/scripts/: torque_plotter.py
workspace/src/six_dof_arm/src/: torque_publisher.cpp  trajectory.cpp
workspace/src/six_dof_arm/urdf/: kr120r2500pro.urdf  kr120r2500pro.xacro  kr120r2500pro_macro.xacro
workspace/src/six_dof_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
workspace/src/six_dof_arm_moveit_config/config/: controllers.yaml  joint_limits.yaml  kuka_kr120r2500pro.ros2_control.xacro  kuka_kr120r2500pro.srdf  kuka_kr120r2500pro.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
workspace/src/six_dof_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
